Refs #3411: fix CSS on JP dropdown (when item list too short)

--- a/app/assets/stylesheets/components/_buttons.sass
+++ b/app/assets/stylesheets/components/_buttons.sass
@@ -181,6 +181,7 @@ table, .table
           right: auto
 
     &:last-child
-      > .th > .btn-group .dropdown-menu
-        left: auto
-        right: 0
+      &:not(:first-child)
+        > .th > .btn-group .dropdown-menu
+          left: auto
+          right: 0
